[tool.poetry]
name = "python-driver"
version = "0.1.0"
description = ""
authors = ["Andrew Grosser <dioptre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eventlet = "^0.36.1"
gevent = "^24.2.1"
futurist = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
